--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,21 @@
-<html lang="en" data-framework="es6">
+<html
+  lang="en"
+  data-framework="es6"
+>
   <head>
     <meta charset="utf-8" />
     <title>Todo List</title>
-    <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="index.css"
+    />
   </head>
 
   <body>
-    <div role="main" id="root" class="container"></div>
+    <div
+      role="main"
+      id="root"
+      class="container"
+    ></div>
   </body>
 </html>
